manifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: saatvik10/k8s-e2e
      ports:
        - containerPort: 80
