namespace.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: backend-team
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
      - containerPort: 80
      - containerPort: 443
